// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader renders At Risk 1`] = `
<div
  className="kpi-card kpi-card--at-risk"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__health"
  >
    <div
      className="property-status property-status--at-risk"
    >
      AT RISK
    </div>
  </div>
  <div
    className="kpi-card__value"
  >
    23%
  </div>
  <div
    className="kpi-card__name"
  >
    INQ → TOU
  </div>
  <div
    className="kpi-card__target"
  >
    Target: 
    40%
  </div>
</div>
`;

exports[`SectionHeader renders NoTargetKPICard 1`] = `
<div
  className="kpi-card kpi-card--no-data kpi-card--no-target"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__no-data"
  >
    No Data
  </div>
  <div
    className="kpi-card__value"
  >
    66%
  </div>
  <div
    className="kpi-card__name"
  >
    TOU → APP
  </div>
  <div
    className="kpi-card__alarm"
  >
    <div
      className="kpi-card__alarm-icon-wrap"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        aria-hidden="true"
        className="kpi-card__alarm-icon"
        color="inherit"
        fill="none"
        focusable="false"
        height="1em"
        role="presentation"
        viewBox="0 0 20 20"
        width="1em"
      >
        <circle
          cx="10"
          cy="10"
          r="9.5"
          stroke="#F3F65C"
        />
        <path
          d="M8.5 4.40002L8.96644 11.8667H11.0263L11.5536 4.40002H8.5ZM10.0037 13.2667C9.23695 13.2667 8.75863 13.7118 8.75863 14.437C8.75863 15.1557 9.23742 15.6 10.0037 15.6C10.7699 15.6 11.2424 15.1557 11.2424 14.437C11.2424 13.7118 10.7704 13.2667 10.0037 13.2667Z"
          fill="#F3F65C"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SectionHeader renders NoValueKPICard 1`] = `
<div
  className="kpi-card kpi-card--no-data kpi-card--no-value"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__no-data"
  >
    No Data
  </div>
  <div
    className="kpi-card__alarm"
  >
    <div
      className="kpi-card__alarm-icon-wrap"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        aria-hidden="true"
        className="kpi-card__alarm-icon"
        color="inherit"
        fill="none"
        focusable="false"
        height="1em"
        role="presentation"
        viewBox="0 0 20 20"
        width="1em"
      >
        <circle
          cx="10"
          cy="10"
          r="9.5"
          stroke="#F3F65C"
        />
        <path
          d="M8.5 4.40002L8.96644 11.8667H11.0263L11.5536 4.40002H8.5ZM10.0037 13.2667C9.23695 13.2667 8.75863 13.7118 8.75863 14.437C8.75863 15.1557 9.23742 15.6 10.0037 15.6C10.7699 15.6 11.2424 15.1557 11.2424 14.437C11.2424 13.7118 10.7704 13.2667 10.0037 13.2667Z"
          fill="#F3F65C"
        />
      </svg>
    </div>
  </div>
  <div
    className="kpi-card__name"
  >
    TOU → APP
  </div>
</div>
`;

exports[`SectionHeader renders Off Track 1`] = `
<div
  className="kpi-card kpi-card--off-track"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__health"
  >
    <div
      className="property-status property-status--off-track"
    >
      OFF TRACK
    </div>
  </div>
  <div
    className="kpi-card__value"
  >
    33%
  </div>
  <div
    className="kpi-card__name"
  >
    TOU → APP
  </div>
  <div
    className="kpi-card__target"
  >
    Target: 
    66%
  </div>
</div>
`;

exports[`SectionHeader renders On Track 1`] = `
<div
  className="kpi-card kpi-card--on-track"
>
  <div
    className="kpi-card__bar"
  />
  <div
    className="kpi-card__health"
  >
    <div
      className="property-status property-status--on-track"
    >
      ON TRACK
    </div>
  </div>
  <div
    className="kpi-card__value"
  >
    5%
  </div>
  <div
    className="kpi-card__name"
  >
    USV → INQ
  </div>
  <div
    className="kpi-card__target"
  >
    Target: 
    6%
  </div>
</div>
`;
